--- a/landing.html
+++ b/landing.html
@@ -52,29 +52,58 @@
                 <h2>need more for your fleet of elevators </h2>
                 <h3>all our products are made <br/> with heart and soul</h3>
             </div>
+            <div class="separator">
+                <img src="logos/separator_black.png">
+            </div>
             <div id="product_line_items">
-                <div id="safety">
-                    <h4>SAFETY</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur</p>
-                </div>
-                <div id="cab">
-                    <h4>CAB</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur</p>
-                </div>
-                <div id="door">
-                    <h4>DOOR</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur</p>
-                </div>
-                <div id="mechanics">
-                    <h4>MECHANICS</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur</p>
-                </div>
-                <div id="hatch">
-                    <h4>HOISTWAY/HATCH</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur</p>
-                </div> 
-            </div> <!--product line items-->
-        
+                <ul>
+                    <li class="product_line_li">
+                        <div id="safety">
+                            <img src="images/safety.png" >
+                            <div class="items_text">
+                                    <h4>SAFETY</h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur</p>
+                                </div>
+                         </div>
+                    </li>
+                    <li class="product_line_li">
+                        <div id="cab">
+                            <img src="images/cab.png">
+                            <div class="items_text">
+                                <h4>CAB</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur</p>
+                             </div>
+                        </div>
+                    </li>   
+                    <li class="product_line_li">
+                        <div id="door">
+                            <img src="images/door.png">
+                            <div class="items_text">
+                                <h4>DOOR</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="product_line_li">
+                        <div id="mechanics">
+                            <img src="images/mechanics.png">
+                            <div class="items_text">
+                                <h4>MECHANICS</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="product_line_li">
+                        <div id="hatch">
+                            <img src="images/hatch.png">
+                            <div class="items_text">
+                                <h4>HOISTWAY/HATCH</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur</p>
+                            </div>
+                        </div> 
+                    </li>
+                    </ul>
+            </div> <!--product line items -->
         </div> <!--productline-->
         <div id="contact">
             <h3>stay in touch with our customer service</h3>
