more icons added

--- a/landing.html
+++ b/landing.html
@@ -14,10 +14,10 @@
                 <nav>
                     <img src="logos/logo_sublight.svg">
                     <ul>
-                        <li><a href="#">OUR SERVICES</a></li>
-                        <li><a href="#">OUR PRODUCTS</a></li>
-                        <li><a href="#">ABOUT US</a></li>
-                        <li><a href="#">CONTACT US</a></li>
+                        <li><a href="#second">OUR SERVICES</a></li>
+                        <li><a href="#product_line">OUR PRODUCTS</a></li>
+                        <li><a href="#contact">SERVICE REQUEST</a></li>
+                        <li><a href="#footer">CONTACT US</a></li>
                     </ul>
                 </nav>
                 
@@ -25,12 +25,18 @@
             <div id ="slogan">
                 <h1>Our Mission</h1>
                 <h2>Take you to the top</h2>
+                <a href="#second">
+                    <input id="button" type="image" src="logos/elevator_btn.svg">
+                </a>
             </div>
         </div> <!--main-->
         <div id="second">
             <div id="onestep">
                 <h1>one-stop for your elevator needs</h1>
                 <h2>one step closer to success</h2>
+                <div class="separator">
+                    <img src="logos/separator_gray.svg">
+                </div>
             </div>
         </div> <!--second-->
         <div id="third">
@@ -53,7 +59,7 @@
                 <h3>all our products are made <br/> with heart and soul</h3>
             </div>
             <div class="separator">
-                <img src="logos/separator_black.png">
+                <img src="logos/separator_black.svg">
             </div>
             <div id="product_line_items">
                 <ul>
@@ -104,6 +110,9 @@
                     </li>
                     </ul>
             </div> <!--product line items -->
+            <a>
+                <input type="image" src="logos/download.svg">
+            </a>
         </div> <!--productline-->
         <div id="contact">
             <h3>stay in touch with our customer service</h3>
