--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="mystyle.css">
-    <link rel="icon" type="image/x-icon" href="../Sublight_Engines_Landing_Page//logos/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/logos/favicon.ico">
     <title>Sublight Engines</title>
 </head>
 <body>
