--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width", initial-scale="1">
     <link rel="stylesheet" href="mystyle.css">
     <link rel="icon" type="image/x-icon" href="/logos/favicon.ico">
-    <script src="myscripts.js"></script>
+    <script src="myscripts.js" defer></script>
     <title>Sublight Engines</title>
 </head>
 <body>
