--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <li><a href="#contact">SERVICE REQUEST</a></li>
                         <li><a href="#footer">CONTACT US</a></li>
                     </ul>
-                    <a href="#" class="toggle-button">
+                    <a class="toggle-button">
                         <span class="bar"></span>
                         <span class="bar"></span>
                         <span class="bar"></span>
