--- a/index.html
+++ b/index.html
@@ -143,20 +143,21 @@
             <div id="contact_separator" class="separator">
                 <img src="logos/separator_black.svg">
             </div>
-            <div id ="contactform">
-                <form id="form"  method="POST" action="#">
+            <div id="contactform">
+                <form id="form"  method="POST" action="/" >
+                    
                     <div id="contact_name">
                         <label for="name"><strong>NAME *</strong></label><br/>
-                        <input class="name" type="text" id="name" name="name" placeholder="Enter your full name" size="20" required/><br/>
+                        <input class="name" type="text" id="name" name="name" placeholder="Enter your full name" size="20" minlength="3" /><br/>   
                     </div>
                     <div id="contact_email">
-                    <label for="email"><strong>ADDRESS *</strong> </label><br/>
-                    <input class="email" type="email" id="email" name="email" placeholder="yourname@company.com" required/><br/>
-                    </div>
+                        <label for="email"><strong>EMAIL ADDRESS *</strong> </label><br/>
+                        <input class="email" type="email" id="email" name="email" placeholder="yourname@company.com"/><br/>
+                    </div>  
                     <div id="phone_and_lang">
                         <div class="phone">
                             <label for="phone"><strong>NUMBER</strong></label><br/>
-                            <input type="tel" id="phone" name="phone" placeholder="0 (000) 000 -0000" pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}-[0-9]{4}" />
+                            <input type="tel" id="phone" name="phone" placeholder="123-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" /><br/>
                         </div>
                         <div class="lang">
                             <label for="lang"><strong>PREFERRED LANGUAGE</strong></label><br/>
@@ -169,7 +170,8 @@
                             </select><br/>
                         </div>
                     </div>
-                     <button id="submit_btn">SUBMIT</button>
+                    <div id="error"></div>
+                     <button id="submit_btn" type="submit">SUBMIT</button>
 
 
                 </form>
