working on form

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <img src="logos/separator_black.svg">
             </div>
             <div id="contactform">
-                <form id="form"  method="POST" action="/" >
+                <form id="form" novalidate>
                     
                     <div id="contact_name">
                         <label for="name"><strong>NAME *</strong></label><br/>
@@ -171,7 +171,7 @@
                         </div>
                     </div>
                     <div id="error"></div>
-                     <button id="submit_btn" type="submit">SUBMIT</button>
+                     <button id="submit_btn">SUBMIT</button>
 
 
                 </form>
