form regex completed

--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
                 <img src="logos/separator_black.svg">
             </div>
             <div id="contactform">
-                <form id="form"  method="POST" action="/" novalidate>
+                <form id="form"  method="GET" action="/" novalidate>
                     
                     <div id="contact_name">
                         <label for="name"><strong>NAME *</strong></label><br/>
-                        <input class="name" type="text" id="name" name="name" placeholder="Enter your full name" size="20" minlength="3" /><br/>   
+                        <input class="name" type="text" id="name" name="name" placeholder="First and Last name" size="20" minlength="3" /><br/>   
                     </div>
                     <div id="contact_email">
                         <label for="email"><strong>EMAIL ADDRESS *</strong> </label><br/>
@@ -157,13 +157,13 @@
                     <div id="phone_and_lang">
                         <div class="phone">
                             <label for="phone"><strong>NUMBER</strong></label><br/>
-                            <input type="tel" id="phone" name="phone" placeholder="123-456-7890" /><br/>
+                            <input type="tel" id="phone" name="phone" placeholder="123-456-7890" pattern="\d{3}[ -]?\d{3}[ -]?\d{4}"/><br/>
                         </div>
                         <div class="lang">
                             <label for="lang"><strong>PREFERRED LANGUAGE</strong></label><br/>
                             <select id="lang" name="lang">
                                 <option selected value="">Select</option>
-                                <option value="spanish">Spanish</option>
+                                <option value="spanish">Spanish</option> 
                                 <option value="english">English</option>
                                 <option value="italian">Italian</option>
                                 <option value="french">French</option>
