seo added features

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width", initial-scale="1">
+    <meta name="description" content="You should request our service. Sublight Engines are the best!"/>
     <link rel="stylesheet" href="mystyle.css">
     <link rel="icon" type="image/x-icon" href="/logos/favicon.ico">
     <script type="text/javascript"
@@ -18,18 +19,18 @@
         <div id="main">
             <div id="header">  
                 <nav>
-                    <img id="navimg" src="logos/logo_sublight.svg">
+                    <img id="navimg" alt="logo" src="logos/logo_sublight.svg">
                     <ul class="navbar_links">
                         <li><a href="#second">OUR SERVICES</a></li>
                         <li><a href="#product_line">OUR PRODUCTS</a></li>
                         <li><a href="#contact">SERVICE REQUEST</a></li>
                         <li><a href="#footer">CONTACT US</a></li>
                     </ul>
-                    <a class="toggle-button">
+                    <div class="toggle-button">
                         <span class="bar"></span>
                         <span class="bar"></span>
                         <span class="bar"></span>
-                    </a>
+                    </div>
                 </nav>
                 
             </div> <!--header-->
@@ -37,7 +38,7 @@
                 <h1>Our Mission</h1>
                 <h2>Take you to the top</h2>
                 <a href="#second">
-                    <input id="button" type="image" src="logos/elevator_btn.svg">
+                    <input id="button" alt="elevator_button" type="image" src="logos/elevator_btn.svg">
                 </a>
             </div>
         </div> <!--main-->
@@ -46,20 +47,20 @@
                 <h1>one-stop for your elevator needs</h1>
                 <h2>one step closer to success</h2>
                 <div class="separator" id="onestep_separator">
-                    <img src="logos/separator_gray.svg">
+                    <img alt="separator" src="logos/separator_gray.svg">
                 </div>
             </div>
             <div id="services">
                 <div class="services">
-                    <img src="logos/design.svg">
+                    <img alt="we design" src="logos/design.svg">
                     <p>WE DESIGN</p>
                 </div> 
                 <div class="services">
-                    <img id="webuild" src="logos/build.svg">
+                    <img alt="we build" id="webuild" src="logos/build.svg">
                     <p>WE BUILD</p>
                 </div> 
                 <div class="services">
-                    <img src="logos/maintenance.svg">
+                    <img alt="we maintain" src="logos/maintenance.svg">
                     <p>WE MAINTAIN</p>
                 </div>    
             </div>
@@ -75,7 +76,7 @@
                 </p>
             </div>
             <div id="product_img">
-                <img src="images/third_1.jpg">
+                <img alt="product" src="images/third_1.jpg">
             </div>
         </div> <!--third-->
         <div id="product_line">
@@ -84,13 +85,13 @@
                 <h3>all our products are made <br/> with heart and soul</h3>
             </div>
             <div class="separator" id="products_separator">
-                <img src="logos/separator_black.svg">
+                <img alt="separator"  src="logos/separator_black.svg">
             </div>
             <div id="product_line_items">
                 <ul>
                     <li>
                         <div class="product_line_li" id="safety">
-                            <img src="images/safety.png" >
+                            <img alt="safety" src="images/safety.png" >
                             <div class="items_text">
                                     <h4>SAFETY</h4>
                                     <p>Lorem ipsum dolor sit amet, consectetur</p>
@@ -99,7 +100,7 @@
                     </li>
                     <li>
                         <div  class="product_line_li" id="cab">
-                            <img src="images/cab.png">
+                            <img alt="another image" src="images/cab.png">
                             <div class="items_text">
                                 <h4>CAB</h4>
                                 <p>Lorem ipsum dolor sit amet, consectetur</p>
@@ -108,7 +109,7 @@
                     </li>   
                     <li>
                         <div class="product_line_li" id="door">
-                            <img src="images/door.png">
+                            <img alt="door" src="images/door.png">
                             <div class="items_text">
                                 <h4>DOOR</h4>
                                 <p>Lorem ipsum dolor sit amet, consectetur</p>
@@ -117,7 +118,7 @@
                     </li>
                     <li>
                         <div class="product_line_li" id="mechanics">
-                            <img src="images/mechanics.png">
+                            <img alt="mechanincs" src="images/mechanics.png">
                             <div class="items_text">
                                 <h4>MECHANICS</h4>
                                 <p>Lorem ipsum dolor sit amet, consectetur</p>
@@ -126,7 +127,7 @@
                     </li>
                     <li>
                         <div class="product_line_li" id="hatch">
-                            <img src="images/hatch.png">
+                            <img alt="hatch" src="images/hatch.png">
                             <div class="items_text">
                                 <h4>HOISTWAY/HATCH</h4>
                                 <p>Lorem ipsum dolor sit amet, consectetur</p>
@@ -145,7 +146,7 @@
                 <h4>feel free to contact us <br/> for any questions</h4>
             </div>
             <div id="contact_separator" class="separator">
-                <img src="logos/separator_black.svg">
+                <img alt="separator" src="logos/separator_black.svg">
             </div>
             <div id="contactform">
                 <form id="form"  method="GET" action="/" novalidate>
@@ -183,7 +184,7 @@
         </div>
         <div id="since">
                 <h3>With your trust since 1943.</h3>
-                <img src="logos/signature.svg">
+                <img alt="another logo" src="logos/signature.svg">
         </div>
         
 
